--- a/inst/feedback.css
+++ b/inst/feedback.css
@@ -1,10 +1,13 @@
-
-<style type="text/css">
+<style>
 
 :root {
 	--warn-col: 204, 0, 0;
 }
 
+.main-container {
+    max-width: 100%;
+}
+	
 .feedback {
     border: solid 1px rgb(var(--theme-col));
     padding: 1em 1em 0.5em 1em;
@@ -43,6 +46,183 @@ fb {
 	padding: 2px;
 	border: solid 1px rgb(var(--warn-col));
 	margin: 3px;
+}
+
+
+
+.inner {
+    position: relative;
+}
+
+.main-content {
+	width: calc(100% - 250px - 250px);
+    min-height: 2000px;
+    left: 300px;
+    position: relative;
+}
+
+.sidebar1 {
+	position: fixed;
+}
+
+.sidebar2 {
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 200px;
+    height: 100%;
+}
+
+.mark-container {
+	position: absolute;
+	top: 0;
+	left: 20px;
+	width: 100%;
+	height: 100%;
+}
+
+.mark {
+	position: sticky;
+	position: -webkit-sticky;
+	top: 25px;
+	border: solid 1px rgb(var(--theme-col));
+    font-size: 4em;
+    color: rgb(var(--theme-col));
+    padding: .5em .3em 0em 0.7em;
+    background-color: rgba(var(--theme-col), .3);
+	width: 150px;
+}
+
+.mark::before {
+    content: 'Mark';
+    font-size: 18pt;
+    top: 3px;
+    left: 10px;
+	position: absolute;
+}
+
+
+.results-container {
+	top: 25px;
+    left: 20px;
+    border: solid 1px rgb(var(--warn-col));
+    padding: 20px 6px 0px 10px;
+}
+
+.results-container::before {
+    content: 'Correct results';
+    color: rgb(var(--warn-col));
+    font-size: 18pt;
+    position: relative;
+	top: -12px;
+}
+
+.results strong, .results th {
+	color: rgb(var(--warn-col));
+}
+
+
+@media screen and (max-width: 1130px) { 
+	.sidebar2 {
+		right: 0;
+	}
+	
+	.mark {
+		position: relative;
+		top: 65px;		
+	}
+	
+	.main-content {
+		width: calc(100% - 300px);
+		left: 300px;
+	}
+}
+
+
+@media screen and (max-width: 920px) { 
+	
+	.main-content {
+		position: absolute;
+		top: 220px;
+		width: 100%;
+		left: 0px;
+	}
+	
+	.sidebar1 {
+		position: absolute;
+		top: 10px;
+		height: 100%;
+		min-height: 5000px;
+		z-index: 1;
+	}
+	
+	.results-container {
+		overflow-x: auto;
+		position: sticky;
+		background-color: white;
+	}
+	
+	.results {
+		display: inline-grid;
+		padding: 30px 0px 0px 0px;
+		grid-gap: 5px;
+		min-width: 605px;
+		
+	}
+	
+	.results-container::before {
+		position: absolute;
+		top: 5px;
+	}
+	.results-item {
+		text-align: left;
+		padding: 0;
+	}
+	
+	.item1 {
+		grid-column: 1;
+		grid-row: 1;
+	}
+	
+	.item2 {
+		grid-column: 2;
+		grid-row: 1;
+		margin-top: -8px;
+	}
+	
+	.item3 {
+		grid-column: 3;
+		grid-row: 1;
+	}
+	
+	.mark {
+		top: 310px;		
+	}
+}
+
+
+@media screen and (max-width: 728px) { 
+	.sidebar2 {
+		left: calc(720px - 267px);
+	}
+}
+
+@media screen and (max-width: 560px) { 
+	.sidebar2 {
+		left: 0;
+	}
+	
+	.mark-container {
+		left: 0;
+	}
+	
+	.mark {
+		top: 240px;		
+	}
+	
+	.main-content {
+		top: 360px;
+	}
 }
 
 </style>
