--- a/inst/feedback.css
+++ b/inst/feedback.css
@@ -49,7 +49,8 @@
     background-color: rgba(var(--warn-col), .3);
     padding: 10px;
     text-align: center;
-	margin: 30px;
+	margin: 30px 0;
+	border-radius: 6px;
 }
 
 .flag a {
