--- a/inst/quick_com.css
+++ b/inst/quick_com.css
@@ -110,7 +110,7 @@ details[open] > summary {
 .section.level3 {
     border: solid 1px;
     border-radius: 6px;
-	margin: 0 -5px;
+	margin: 0 -5px 20px -5px;
 	padding: 0 5px;
 	background: white;
 }
